[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Starter Python scaffold for enterpriseRAG"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy>=1.24",
  "streamlit>=1.35",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0"
]
semantic = [
  "sentence-transformers>=2.7"
]
faiss = [
  "faiss-cpu>=1.8"
]
llm = [
  "openai>=1.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
